[metadata]
name = coverage2sql
summary = Command to Read a coverage file and put the data in a SQL database
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    coverage2sql

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    coverage2sql = coverage2sql.shell:main
    coverage2sql-db-manage = coverage2sql.migrations.cli:main
oslo.config.opts =
    coverage2sql.shell = coverage2sql.shell:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = coverage2sql/locale
domain = coverage2sql

[update_catalog]
domain = coverage2sql
output_dir = coverage2sql/locale
input_file = coverage2sql/locale/coverage2sql.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = coverage2sql/locale/coverage2sql.pot
