[metadata]
name = coverage2sql
summary = Command to Read a coverage file and put the data in a SQL database
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/coverage2sql/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    coverage2sql

[entry_points]
console_scripts =
    coverage2sql = coverage2sql.shell:main
    coverage2sql-db-manage = coverage2sql.migrations.cli:main
oslo.config.opts =
    coverage2sql.shell = coverage2sql.shell:list_opts

[compile_catalog]
directory = coverage2sql/locale
domain = coverage2sql

[update_catalog]
domain = coverage2sql
output_dir = coverage2sql/locale
input_file = coverage2sql/locale/coverage2sql.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = coverage2sql/locale/coverage2sql.pot
